[package]
name = "rust-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rand = "0.8.3"
structopt = "0.3.15"
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.1"
predicates = "1.0.5"

[[bin]]
name = "rust-cli"
path = "src/main.rs"